--- a/MidnightArtifact/app/src/main/res/layout/activity_otherpersonal.xml
+++ b/MidnightArtifact/app/src/main/res/layout/activity_otherpersonal.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -15,4 +15,13 @@
 
     </com.base.baselibs.widget.pullzoom.PullZoomScrollVIew>
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/otherpersonal_chat_iv"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_width="@dimen/dimen_dp_50"
+        android:layout_height="@dimen/dimen_dp_50"
+        android:layout_marginBottom="@dimen/dimen_dp_15"
+        android:src="@mipmap/other_chat_ic" />
+
+</RelativeLayout>
