--- a/MidnightArtifact/app/src/main/res/layout/part_main_top_bar.xml
+++ b/MidnightArtifact/app/src/main/res/layout/part_main_top_bar.xml
@@ -32,6 +32,7 @@
             android:layout_marginLeft="@dimen/dimen_dp_60"
             android:layout_marginRight="@dimen/dimen_dp_60"
             android:singleLine="true"
+            android:textColor="@color/color_2B2B2B"
             android:text="标题"
             android:textSize="@dimen/dimen_sp_18" />
     </RelativeLayout>
@@ -70,7 +71,7 @@
             android:gravity="center"
             android:textSize="@dimen/dimen_sp_13"
             android:visibility="gone"
-            android:textColor="@color/color_black"/>
+            android:textColor="@color/color_2B2B2B"/>
 
         <ImageView
             android:id="@+id/bar_right_iv"
